<resources>
    <string name="app_name">Apres Movil</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="consulta">Atención al cliente</string>
    <string name="emergencias">Emergencias</string>
    <string name="call">Llamar</string>
    <string name="title_activity_main">Apres Movil</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_health_centers">Centros Médicos</string>
    <string name="nav_news">Novedades</string>
    <string name="addressLabel">Dirección</string>
    <string name="telephoneLabel">Teléfono</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="service_not_available">Servicio no disponible</string>
    <string name="invalid_lat_long_used">Dirección inválida</string>
    <string name="no_address_found">Dirección no encontrada</string>
    <string name="address_found">Dirección encontrada</string>
    <string name="nav_map">Mapa</string>
    <string name="title_activity_current_location">CurrentLocationActivity</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="no_location_detected">No location detected. Make sure location is enabled on the device.</string>
    <string name="nav_current_location">Ubicación actual</string>

    <!-- LOCATION ACTIVITY -->
    <string name="location_latitude_label">Latitude</string>
    <string name="location_longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>
    <string name="location_updated_message">Location updated</string>
    <string name="nav_cartilla">Cartilla</string>
    <string name="plan_filter_label">Plan</string>
    <string name="speciality_filter_label">Especialidad</string>
    <string name="cartilla_button_submit_label">Buscar</string>
    <string name="location_filter_label">Más cercanos primero</string>
    <string name="appointment_time_start_label">Horario</string>
    <string name="appointment_button_submit_label">Confirmar</string>
    <string name="doctor">Doctor</string>
    <string name="ingresar">Ingresar</string>
    <string name="welcome">Bienvenido a Apres Movil!</string>
    <string name="ingresar_socio">Ingresá tu número de socio</string>
    <string name="prompt_member">Nro de socio</string>
    <string name="nav_my_appointments">Mis turnos</string>
    <string name="cancelar">Cancelar</string>
    <string name="cancel_dialog_title">Deseas cancelar el turno?</string>
    <string name="alert_dialog_ok">Si</string>
    <string name="alert_dialog_cancel">No</string>
    <string name="nav_home">Home</string>
    <string name="nav_logout">Salir</string>
    <string name="registraci_n">Registrarme</string>
    <string name="title_activity_register">Registro</string>
    <string name="prompt_name">Nombre Completo</string>
    <string name="prompt_address">Dirección</string>
    <string name="prompt_telephone">Teléfono</string>
    <string name="no_appointments">No hay turnos disponibles para el día seleccionado</string>

</resources>
