<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context="com.apres.apresmovil.fragments.CartillaFragment">

    <LinearLayout
        android:id="@+id/search_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plan_filter_label"
            android:textSize="12sp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/plan_filter"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speciality_filter_label"
            android:textSize="12sp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/speciality_filter"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_filter_label"
            android:id="@+id/location_filter"
            android:layout_gravity="end"
            android:singleLine="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cartilla_button_submit_label"
            android:id="@+id/cartilla_button_submit"
            android:layout_gravity="end"
            android:nestedScrollingEnabled="true" />

    </LinearLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/doctor_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@drawable/round_button"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:tint="@color/textIconsColor"
                />

            <ImageButton
                android:id="@+id/map_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/round_button"
                android:src="@drawable/ic_location_on_black_24dp"
                android:tint="@color/textIconsColor"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_alignTop="@+id/back_button"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>


        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/cartilla_list"
            android:name="com.apres.apresmovil.CartillaFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layoutManager="LinearLayoutManager"
            tools:context=".fragments.CartillaFragment"
            tools:listitem="@layout/fragment_cartillaitem" />

    </LinearLayout>





</LinearLayout>
