<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.apres.apresmovil.activities.RegisterActivity"
    tools:showIn="@layout/activity_register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/register_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="0dp"
            android:fillViewport="true"
            >

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_weight="2"
                    android:layout_height="0dp"
                    >

                    <LinearLayout
                        android:id="@+id/email_login_form"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="32dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true">

                        <LinearLayout
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:layout_width="0px"
                            android:layout_height="0px"/>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <AutoCompleteTextView
                                android:id="@+id/register_nro_socio"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_member"
                                android:inputType="number"
                                android:maxLines="1"
                                android:singleLine="true"
                                />

                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <AutoCompleteTextView
                                android:id="@+id/register_nombre"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_name"
                                android:inputType="text"
                                android:maxLines="1"
                                android:singleLine="true"
                                />

                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <AutoCompleteTextView
                                android:id="@+id/register_direccion"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_address"
                                android:inputType="text"
                                android:maxLines="1"
                                android:singleLine="true"
                                />

                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <AutoCompleteTextView
                                android:id="@+id/register_telefono"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_telephone"
                                android:inputType="text"
                                android:maxLines="1"
                                android:singleLine="true"
                                />

                        </android.support.design.widget.TextInputLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/plan_filter_label"
                            android:textSize="12sp"
                            android:paddingLeft="16dp"
                            android:paddingTop="16dp"
                            android:paddingRight="16dp" />
                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/register_plan"
                            style="@style/Widget.AppCompat.Spinner.Underlined"
                            />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <Button
                                android:id="@+id/email_sign_up_button"
                                style="?android:textAppearanceSmall"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:text="@string/registraci_n"
                                android:textColor="#fff"
                                android:background="@color/colorPrimary"
                                android:textStyle="bold" />
                        </RelativeLayout>

                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
